2006-12-21 Joerg Wunsch <j@uriah.heep.sax.de>

	Submitted by Christian Starkjohann:
	* ser_avrdoper.c (usbOpenDevice): clear the error code when
	returning successfully.

2006-12-21 Joerg Wunsch <j@uriah.heep.sax.de>

	Submitted by Christian Starkjohann:
	patch #5507: Support for AVR-Doper USB programmer in HID mode
	* configure.ac: Add hooks to detect the Win32 HID library,
	as well as the existence of <ddk/hidsdi.h>.
	* Makefile.am: Add new files.
	* my_ddk_hidsdi.h: (New file.)
	* ser_avrdoper.c: (New file.)
	* serial.h: Add declaration for avrdoper_serdev.
	* stk500v2.c: Add hook to divert to the AVR Doper code.
	* avrdude.1: Document the AVR Doper support.
	* doc/avrdude.texi: (Ditto.)

2006-12-15 Joerg Wunsch <j@uriah.heep.sax.de>

	Submitted by ivanv at netman.ru
	* jtagmkI.c: fix length for single-byte write operations.
	Closes bug #18527 JTAG ICE: fuse bits have been writen incorrectly

2006-12-11 Joerg Wunsch <j@uriah.heep.sax.de>

	* jtagmkII.c (jtagmkII_paged_write): Remove a debugging
	usleep(1000000) that accidentally crept in in rev 1.19.

2006-12-11 Joerg Wunsch <j@uriah.heep.sax.de>

	* ser_posix.c (ser_open): Do fill in fdp->ifd before already
	using it in ser_setspeed().

2006-12-11 Joerg Wunsch <j@uriah.heep.sax.de>

	* jtagmkI.c (jtagmkI_close): revert baud rate to the initial
	value in case we had changed it.
	Fixes bug #18262: JTAGMKI/JTAG1 Reset Bug

2006-12-11 Colin O'Flynn <coflynn@newae.com>

	* safemode.c: Stop ignoring return values!
	  Closes bug #18339

2006-12-11 Joerg Wunsch <j@uriah.heep.sax.de>

	Submitted by Nick Lott:
	* avrdude.conf.in: Fix signature for ATmega8515.
	Closes bug #18348: ATMEGA8515 Signature is wrong in avrdude.conf

2006-12-11 Joerg Wunsch <j@uriah.heep.sax.de>

	* avr.c: Fix a bug introduced in rev. 1.69, when implementing the
	fallback from each programmer's paged_load() or paged_write()
	method, respectively.  The return value needs to be checked for